<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Forkly</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_profile">Profile</string>
</resources>
